--- a/client/main/results.css
+++ b/client/main/results.css
@@ -12,7 +12,7 @@
     top: 0 ;
     overflow: scroll ;
     transition: all .2s ;
-    background-color: white ;
+    background-color: #282c34 ;
 }
 
 .silky-welcome-panel {
