--- a/client/main/variableeditor.css
+++ b/client/main/variableeditor.css
@@ -14,7 +14,7 @@
 .silky-variable-editor.hidden {
     height: 0 ;
     transition-timing-function: ease, step-end ;
-    border-top: 1px solid #F0F0F0 ;
+    border-top: 1px solid #181a1f ;
 }
 
 .silky-variable-editor-main {
