--- a/client/resultsview/main.less
+++ b/client/resultsview/main.less
@@ -3,7 +3,7 @@
 
 body {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" ;
-    color: #333333 ;
+    color: #abb2bf ;
     cursor: default ;
     margin: 0 ;
     font-size: 12px ;
@@ -157,7 +157,7 @@ th.silky-results-table-title-cell{
 }
 
 .silky-results-table-table thead th {
-    border-bottom: 1px solid #333333 ;
+    border-bottom: 1px solid #abb2bf ;
 }
 
 .silky-results-table-table thead .silky-results-table-header-row-super th:empty {
@@ -165,7 +165,7 @@ th.silky-results-table-title-cell{
 }
 
 .silky-results-table-table tbody tr:last-child td {
-    border-bottom: 2px solid #333333 ;
+    border-bottom: 2px solid #abb2bf ;
 }
 
 .silky-results-error .silky-results-table-table thead th,
@@ -297,7 +297,7 @@ table.row-selectable tr.selected td {
 
 .silky-results-syntax,
 .silky-results-text {
-    color: #333333 ;
+    color: #abb2bf ;
     user-select: all ;
     -webkit-user-select: all ;
        -moz-user-select: none;
